--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,27 +6,26 @@ homepage: https://github.com/teranetsrl/oauth2_client
 repository: https://github.com/teranetsrl/oauth2_client
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   meta: ^1.1.8
-  http: ^0.12.1
-  flutter_web_auth: ^0.2.4
-  random_string: ^2.0.1
-  crypto: ^2.1.4
-  flutter_secure_storage: ^3.3.3
+  http: ^0.13.0
+  flutter_web_auth:
+    path: '\Clients\Luup\flutter_web_auth'
+  random_string: ^2.2.0-nullsafety
+  crypto: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^4.1.1
+  mockito: ^5.0.1
   pedantic: ^1.9.0
 
 # The following section is specific to Flutter.
 flutter:
-
   # To add assets to your package, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
@@ -37,7 +36,6 @@ flutter:
   #
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # To add custom fonts to your package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
