--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,7 @@ dependencies:
     sdk: flutter
   meta: ^1.1.8
   http: ^0.13.0
-  flutter_web_auth:
-    git:
-      url: https://github.com/phess101/flutter_web_auth
+  flutter_web_auth: ^0.3.0
   random_string: ^2.2.0-nullsafety
   crypto: ^3.0.0
 
